--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 	<body>
 		  <!--Do the exercises here-->
+		  <p>This is wonderful! </p>
+		  <h1>Hello</h1>
+		  <h2>This is my story</h2>
+		  <h3>How I break into tech.
+			  I start with the basics and keep exploring since then.</h3> 
+		  <i> More on this later...</i> 
 	</body>
 
 </html>
