--- a/index.html
+++ b/index.html
@@ -3,17 +3,32 @@
 
 	<head>
 		  <meta charset="utf-8">
-		    <title>Lapio website</title>
+		    <title>My page</title>
 	</head>
 
 	<body>
 		  <!--Do the exercises here-->
-		  <p>This is wonderful! </p>
+		body {
+  			font-family: 'Helvetica', 'Arial', sans-serif;
+		}
 		  <h1>Hello</h1>
 		  <h2>This is my story</h2>
 		  <h3>How I break into tech.
-			  I start with the basics and keep exploring since then.</h3> 
-		  <i> More on this later...</i> 
+			  I start with the basics and keep exploring since then.</h3>
+		<p>
+			p { background-color: green; }
+			The technologies I currently use:
+			<ul>
+				<li>Salesforce: Apex, Visualforce, SOQL</li>
+				<li>Java</li>
+				<li>Python</li>
+				<li>R</li>
+				<li>AWS, Azure(very rudimentary for now :))
+		</ul>					
+		</p>
+		  <i> More on this later... Meanwhile have fun exploring!</i>
+	<img src="https://cdn.pixabay.com/photo/2017/07/24/15/07/akita-2534986_960_720.jpg" alt="Curious akita" height="240" width="320"/>
+	<p> Picture credit: pixabay.com <a href="https://pixabay.com"></a></p>
 	</body>
 
 </html>
