--- a/index.html
+++ b/index.html
@@ -2,21 +2,26 @@
 <html>
 
 	<head>
+		<style>
+			body {
+  			font-family: 'Helvetica', 'Arial', sans-serif;
+		}
 		  <meta charset="utf-8">
 		    <title>My page</title>
+		</style>
 	</head>
 
 	<body>
 		  <!--Do the exercises here-->
-		body {
-  			font-family: 'Helvetica', 'Arial', sans-serif;
-		}
+		
 		  <h1>Hello</h1>
 		  <h2>This is my story</h2>
 		  <h3>How I break into tech.
 			  I start with the basics and keep exploring since then.</h3>
 		<p>
-			p { background-color: green; }
+			p { 
+				background-color: green; 
+			}
 			The technologies I currently use:
 			<ul>
 				<li>Salesforce: Apex, Visualforce, SOQL</li>
