--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 			body {
   			font-family: 'Helvetica', 'Arial', sans-serif;
 			}
-		  	p { 
-				background-color: green; 
+		  	body { 
+				background-color: blue; 
 			}
 		  </style>
 		 <title>My page</title>
@@ -17,8 +17,8 @@
 	<body>
 		  <!--Do the exercises here-->
 		
-		  <h1>Hello</h1>
-		  <h2>This is my story</h2>
+		  <h1>Hello!</h1>
+		  <h3>This is my story</h2>
 		  <h3>How I break into tech.
 			  I start with the basics and keep exploring since then.</h3>
 		<p>
@@ -29,7 +29,7 @@
 				<li>Java</li>
 				<li>Python</li>
 				<li>R</li>
-				<li>AWS, Azure(very rudimentary for now :))
+				<li>AWS, Azure(very rudimentary for now)
 		</ul>					
 		</p>
 		  <i> More on this later... Meanwhile have fun exploring!</i>
