--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   			font-family: 'Helvetica', 'Arial', sans-serif;
 			}
 		  	body { 
-				background-color: blue; 
+				background-color: grey; 
 			}
 		  </style>
 		 <title>My page</title>
@@ -18,23 +18,23 @@
 		  <!--Do the exercises here-->
 		
 		  <h1>Hello!</h1>
-		  <h3>This is my story</h2>
-		  <h3>How I break into tech.
+		  <h3>This is my story.</h3>
+		  <h3>How I grow to love tech.
 			  I start with the basics and keep exploring since then.</h3>
 		<p>
 			
-			The technologies I currently use:
+			The technologies I know:
 			<ul>
 				<li>Salesforce: Apex, Visualforce, SOQL</li>
 				<li>Java</li>
 				<li>Python</li>
 				<li>R</li>
-				<li>AWS, Azure(very rudimentary for now)
+				<li>AWS, Azure(so very rudimentary for now)
 		</ul>					
 		</p>
 		  <i> More on this later... Meanwhile have fun exploring!</i>
 	<img src="https://cdn.pixabay.com/photo/2017/07/24/15/07/akita-2534986_960_720.jpg" alt="Curious akita" height="240" width="320"/>
-	<p> Picture credit: pixabay.com <a href="https://pixabay.com"></a></p>
+	<p> Picture credit:<a href="https://pixabay.com">pixabay.com</a></p>
 	</body>
 
 </html>
