--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   			font-family: 'Helvetica', 'Arial', sans-serif;
 			}
 		  	body { 
-				background-color: grey; 
+				background-color: light grey; 
 			}
 		  </style>
 		 <title>My page</title>
