--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 				<li>Java</li>
 				<li>Python</li>
 				<li>R</li>
-				<li>AWS, Azure(so very rudimentary for now)
+				<li>PowerBI</li>
+				<li>AWS, Azure (so very rudimentary for now)
 		</ul>					
 		</p>
 		  <i> More on this later... Meanwhile have fun exploring!</i>
 	<img src="https://cdn.pixabay.com/photo/2017/07/24/15/07/akita-2534986_960_720.jpg" alt="Curious akita" height="240" width="320"/>
-	<p> Picture credit:<a href="https://pixabay.com">pixabay.com</a></p>
+	<p> Picture Credit: <a href="https://pixabay.com">pixabay.com</a></p>
 	</body>
 
 </html>
