--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 			
 			The technologies I know:
 			<ul>
-				<li>Salesforce: Apex, Visualforce, SOQL</li>
+				<li>Salesforce: Einstein Analytics, Apex, Visualforce, SOQL</li>
 				<li>Java</li>
-				<li>Python</li>
+				<li>Python (pandas, scikit-learn)</li>
 				<li>R</li>
-				<li>PowerBI</li>
+				<li>Tableau, PowerBI</li>
 				<li>AWS, Azure (so very rudimentary for now)
 		</ul>					
 		</p>
